--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   "license": "MIT",
   "devDependencies": {
     "http-server": "^0.9.0",
-    "jasmine-core": "^2.4.1",
-    "karma": "^1.2.0",
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
     "karma-chrome-launcher": "^1.0.1",
     "karma-coverage": "^1.1.1",
+    "karma-firefox-launcher": "^1.0.0",
     "karma-jasmine": "^1.0.2"
   },
   "scripts": {
